# zled-frame

./: .gitignore
app/: CMakeLists.txt  app.overlay  prj.conf
app/src/: main.c  pixels.c  pixels.h
zled_frame/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
zled_frame/src/: main.c  network.c  network.h  pixels.c  pixels.h
